hphp/hack/test/extended_reasons/generic_subtyping_upper_bound_2.php.diff.exp
--- control

+++ test

@@ -1,31 +1,27 @@

-error: Typing[4323] Invalid argument [1]
--> T is a constrained type parameter [2]
--> This type constraint is violated [3]
--> Expected D [3]
--> But got A [4]
+error: Typing[4110] Invalid argument [1]
+-> Expected D [2]
+-> But got A [3]
 
 hphp/hack/test/extended_reasons/generic_subtyping_upper_bound_2.php:12:20
-       7 | class D extends B {}
-       8 | 
-[2,3]  9 | function rcvr_both_bounds<T as D as B>(T $x): void {}
-      10 | 
-[4]   11 | function call_both_bounds_with_upper_bound<T as A>(T $x): void {
-[1]   12 |   rcvr_both_bounds($x);
-      13 | }
+     7 | class D extends B {}
+     8 | 
+[2]  9 | function rcvr_both_bounds<T as D as B>(T $x): void {}
+    10 | 
+[3] 11 | function call_both_bounds_with_upper_bound<T as A>(T $x): void {
+[1] 12 |   rcvr_both_bounds($x);
+    13 | }
 
-error: Typing[4323] Invalid argument [1]
--> T is a constrained type parameter [2]
--> This type constraint is violated [3]
--> Expected D [3]
--> But got T as A [4]
+error: Typing[4110] Invalid argument [1]
+-> Expected D [2]
+-> But got T as A [3]
 
 hphp/hack/test/extended_reasons/generic_subtyping_upper_bound_2.php:12:20
-       7 | class D extends B {}
-       8 | 
-[2,3]  9 | function rcvr_both_bounds<T as D as B>(T $x): void {}
-      10 | 
-[4]   11 | function call_both_bounds_with_upper_bound<T as A>(T $x): void {
-[1]   12 |   rcvr_both_bounds($x);
-      13 | }
+     7 | class D extends B {}
+     8 | 
+[2]  9 | function rcvr_both_bounds<T as D as B>(T $x): void {}
+    10 | 
+[3] 11 | function call_both_bounds_with_upper_bound<T as A>(T $x): void {
+[1] 12 |   rcvr_both_bounds($x);
+    13 | }
 
 2 errors found